gac_sb/objects/AppATformation__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>Date_de_Formation__c</fullName>
        <label>Date de Formation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Etablissement__c</fullName>
        <label>Etablissement</label>
        <referenceTo>AppATetablissement__c</referenceTo>
        <relationshipLabel>Formations</relationshipLabel>
        <relationshipName>Formations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lieu_de_formation__c</fullName>
        <label>Lieu de formation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Locaux GAC</fullName>
                </value>
                <value>
                    <fullName>Locaux Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Formation</label>
    <nameField>
        <label>Sujet de la Formation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>